# src/routes.ts
@@ -9,8 +9,10 @@ const router = Router();
 // Game routes
 router.post('/api/game', GameController.create);
 router.get('/api/game/:gameid', GameController.getGame);
+router.get('/api/game/:gameid/history', GameController.getGameHistory);
 router.get('/api/game/:gameid/move', GameController.getMoves);
 router.post('/api/game/:gameid/move', GameController.move);
+
 
 router.use('/api-docs', swaggerUi.serve);
 router.get('/api-docs', swaggerUi.setup(apiSpec, {}));
